refactor: create QRsList on server